--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
     implementation('org.projectlombok:lombok:1.18.24')
-    compileOnly('org.projectlombok:lombok:1.18.24')
+    testCompileOnly('org.projectlombok:lombok:1.18.24')
     annotationProcessor('org.projectlombok:lombok-maven:1.18.20.0')
     testCompileOnly('org.projectlombok:lombok:1.18.24')
     testAnnotationProcessor('org.projectlombok:lombok-maven:1.18.20.0')
